--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -131,7 +131,7 @@
   body {
     @apply bg-background text-foreground;
   }
-  hoverEffect{
+  .hoverEffect{
     @apply transition-all duration-300 ease-in-out
   }
 }
