--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -132,6 +132,9 @@
     @apply bg-background text-foreground;
   }
   .hoverEffect{
-    @apply transition-all duration-300 ease-in-out
+    @apply transition-all duration-300 ease-in-out;
+  }
+  button{
+    @apply hover:cursor-pointer;
   }
 }
